Customized buttons and fixed horizontal scroll.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -65,9 +65,9 @@ main .row:first-of-type {
   background-color: #1d1d1c;
   color: rgb(221, 221, 29);
   font-family: 'Patua One';
-  font-size: 20px;
-  margin-top: 20px;
-  width: 170px;
+  font-size: 16px;
+  margin-top: 5px;
+  width: 120px;
   height: 50px;
 
 }
@@ -108,6 +108,8 @@ main .row:first-of-type {
 body {
     margin-top: 100px;
     text-align: center;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 h6 {
